# rosbag-manager

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  init-letsencrypt.sh
backend/: Dockerfile  pyproject.toml
backend/app/: config.py  dependencies.py  main.py
backend/app/db/: redis.py  session.py
backend/app/db/migrations/: env.py
backend/app/db/migrations/versions/: 0001_initial.py  0002_users.py  0003_bag_uploader.py  0004_bag_published.py  0005_nas.py  0006_frame_count.py  0007_user_permissions.py  0008_team.py  0009_bag_team_array.py  0010_nas_import_permission.py  0011_last_login.py  0012_robots.py  0013_live_config.py  0014_networks.py  0015_can_manage_robots.py  0016_robot_access.py  0017_user_display_name.py  0018_lichtblick_layouts.py  0019_robot_layout.py  0020_robot_use_proxy.py
backend/app/models/: __init__.py  bag.py  job.py  lichtblick_layout.py  live_config.py  nas_config.py  network.py  robot.py  robot_access.py  team.py  topic.py  user.py
backend/app/routers/: admin.py  auth.py  bags.py  jobs.py  layouts.py  nas.py  robots.py  viewer.py
backend/app/schemas/: bag.py  job.py  topic.py
backend/app/services/: auth_service.py  bag_service.py  job_service.py  nas_service.py  storage.py
backend/app/utils/: bag_info.py  thumbnails.py
backend/worker/: celery_app.py
backend/worker/tasks/: convert.py  introspect.py  nas_import.py  nas_upload.py  sftp_import.py
frontend/templates/: _robot_card.html  (+13 more)
nginx/: Dockerfile  entrypoint.sh  nginx.conf  nginx.conf.http  nginx.conf.template
(+15 files in other folders)
