[project]
name = "rosbag-viewer"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "pydantic-settings>=2.3",
    "celery[redis]>=5.4",
    "redis>=5.0",
    "python-multipart>=0.0.9",
    "jinja2>=3.1",
    "aiofiles>=23.2",
    "rosbags>=0.11",
    "mcap>=1.1",
    "mcap-ros1-support>=0.7",
    "mcap-ros2-support>=0.5",
    "rerun-sdk>=0.32",
    "Pillow>=10.3",
    "numpy>=1.26",
    "pyyaml>=6.0",
    "python-slugify>=8.0",
    "psycopg2-binary>=2.9",
    "flower>=2.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "factory-boy>=3.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
